change routes and delete records

--- a/blogApp/app/views/timelines/index.html.erb
+++ b/blogApp/app/views/timelines/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Click Timeline</h1>
 
 <div class="table-container">
+<button><%= link_to 'Create New Timeline', new_timeline_path %></button>
 <table class="table">
         <tr>
         <th >Created at</th>
@@ -9,11 +10,12 @@
         </tr>
     
     <tbody>
-        <% @clicktimeline.each do |timeline| %>
+        <% @clicktimelines.each do |timeline| %>
         <tr>
             <td><%= timeline.created_at %></td>
             <td><%= timeline.updated_at %></td>
-            <td><button>Delete</button></td>
+            <td><%= link_to 'Delete', timeline_path(timeline), method: :delete, data: {turbo: false} %></td>
+                    
         </tr>
         <% end %>
     </tbody>
